@@ -6,6 +6,8 @@ See the end for copying conditions.
 
 ** Remove non-free portions of RFC 3454 in doc/specifications/rfc3454.txt.
 
+** Update gnulib files.
+
 ** API and ABI is backwards compatible with the previous version.
 
 * Version 1.5 (released 2008-02-19)
